<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/run_length"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/run_length_suffix"
        android:textSize="38sp"
        android:typeface="sans"
        tools:context=".MainActivity" />
    
    <Chronometer
        android:id="@+id/run_duration"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/run_duration"
        android:textSize="34sp"
        android:typeface="sans"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/run_avg_speed"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/run_avg_speed_suffix"
        android:textSize="30sp"
        android:typeface="sans"
        tools:context=".MainActivity" />

	<ToggleButton
        android:id="@+id/track_run_button"
        android:layout_weight="5"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
	    android:textOff="@string/track_run_button_start"
	    android:textOn="@string/track_run_button_stop"
        android:textSize="30sp"
        android:typeface="sans"
        android:onClick="onToggleClicked"
	    tools:context=".MainActivity" />
	
	<TextView
        android:id="@+id/last_location"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/last_location_prefix"
        android:textSize="18sp"
        android:typeface="sans"
        tools:context=".MainActivity" />

</LinearLayout>
